--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-List of Indian cities and states in CSV, HTML, SQL formats
+List of Indian cities and states in CSV, HTML, SQL formats.
+Source: http://en.wikipedia.org/wiki/List_of_cities_and_towns_in_India_by_population - on FEB 20, 2015
